- New Imported package: R.utils.
- New Suggested package: testthat. Unit tests are now done with testthat
  instead of RUnit.
- RUnit is no longer Suggested.
- Updated version requirement: gmp (>= 0.5-5).  Earlier versions of gmp do
  not export is.bigq() which is required by dplR.  The previous version
  requirement (>= 0.5-2) was a mistake.

File: NAMESPACE
---------------

- Import captureOutput from R.utils.

Various .R files
----------------

- Using deparse.level=0 in some calls to cbind() and rbind() when names
  are not needed in the result.  Due to this change, the first column of
  the $bins matrix in the return value of ccf.series.rwl(),
  corr.rwl.seg(), and corr.series.seg() does not have (undocumented)
  column names anymore.

File: latexify.R
----------------

- Improved efficiency when handling a large number of strings with
  the "bytes" Encoding.  The code now uses R.utils::captureOutput()
  instead of a home-baked re-implementation of (parts of)
  utils::capture.output(), which is also a more compact solution in
  terms of lines of code in dplR.  See Henrik Bengtsson's notes at
  http://www.jottr.org/2014/05/captureOutput.html (referenced on
  2015-01-07).

* CHANGES IN dplR VERSION 1.6.2

No functional changes.  A unit test was changed so it would not fail
on the solaris-sparc CRAN platform.  Also in some other tests,
identicality checks were replaced with near equality checks.


* CHANGES IN dplR VERSION 1.6.1


File: glk.R and glk.Rd
-------------
- Modified by Christian Zang in response to a bug report by Allan Buras. In the
  case of no change from year i to year i+1 in both series then the glk sign
  will for both be 0 and the sum of both is then also 0 and will not be
  accounted for correctly in the sum of synchronous years. Zang and Buras have
  patched and Zang updated the help file to reflect the change as:
  "This implementation improves the original formulation inasmuch as the case