@@ -37,7 +37,7 @@ export(autoread.ids, bai.in, bai.out, ccf.series.rwl, chron, cms,
        combine.rwl, common.interval, corr.rwl.seg, corr.series.seg,
        crn.plot, detrend, detrend.series, ffcsaps, fill.internal.NA,
        gini.coef, glk, hanning, i.detrend, i.detrend.series, morlet,
-       po.to.wc, pointer, powt, print.redfit, rcs, read.compact,
+       net, po.to.wc, pointer, powt, print.redfit, rcs, read.compact,
        read.crn, read.fh, read.ids, read.rwl, read.tridas,
        read.tucson, redfit, runcrit, rwi.stats, rwi.stats.legacy,
        rwi.stats.running, rwl.stats, sea, seg.plot, sens1, sens2,
